# chat-bot

./: .env.sample  .gitignore  .sonarcloud.properties  DESIGN.md  README.md  compose.prod.yaml  compose.yaml
.github/: dependabot.yaml
.github/workflows/: docker-api.yaml  docker-gpu-api.yaml  docker-web.yaml  e2e-web.yaml  lint-web.yaml  test-api.yaml  test-gpu-api.yaml  test-web.yaml
api/: Dockerfile  gunicorn.conf.py  pyproject.toml
api/app/: embedding_worker.py  embedding_worker_drain.py  main.py  migrations.py
api/app/api/: chat.py  chat_sharing.py  chat_state.py  chat_title.py  diplomas.py  documents.py  embedding_administration.py  feedback.py  groups.py  health.py  links.py  provider_credentials.py  questions.py  recommendation_presenters.py  recommendations.py  sponsored_access.py
api/app/constants/: db.py  defaults.py
api/app/data/: __init__.py  chat_conversation_delete.py  chat_credentials.py  chat_persistence.py  chat_rows.py  chat_sharing.py  chat_state.py  chat_users.py  connection.py  diplomas.py  documents.py  embedding_lifecycle.py  embedding_lifecycle_sql.py  embedding_sql.py  feedback.py  links.py  professor_documents.py  professor_groups.py  questions.py  sponsored_usage.py  staff.py
api/app/llms/: agents.py  anthropic.py  chat.py  chunking.py  context.py  diploma_retrieval.py  embedding_fills.py  embedding_generation.py  embeddings.py  google.py  gpu_api.py  link_context.py  mcp.py  model_access.py  model_catalog.py  model_catalog_policy.py  model_catalog_remote.py  model_catalog_types.py  models.py  models_snapshot.json  ollama.py  ollama_catalog.py  openai.py  pricing.py  professor_retrieval.py  prompts.py  provider_credentials.py  query_modes.py  query_transform.py  query_variants.py  recommendation_tools.py  reranker.py  retrieval_budget.py  retrieval_result.py  streams.py  text_utils.py  tools.py
api/app/recommenders/: config.py  groups.py  recommend.py  selection.py  signals.py  text.py  types.py
api/app/schemas/: chat.py  chat_credentials.py  chat_persistence.py  chat_state.py  chat_title.py  chat_user.py  diplomas.py  document_sources.py  documents.py  embedding_administration.py  feedback.py  links.py  questions.py  recommendations.py  sponsored_access.py
api/app/services/: recommendations.py
api/app/utils/: auth.py  http_client.py  posthog_client.py  settings.py  timing.py  topic.py
api/resources/: schema.sql
api/resources/migrations/: 0001_initial_schema.sql  0002_chat_state.sql  0003_allow_microsoft_chat_user_provider.sql  0004_chat_user_credentials.sql  0005_add_chat_message_parts.sql  0006_allow_discord_chat_user_provider.sql  0006_feedback_dislike_reason.sql  0007_add_chat_conversation_share_token.sql  0008_sponsored_luna_usage.sql  0009_add_active_chat_replacement.sql  0010_add_embedding_invalidation.sql
api/resources/prompts/: agent_system.txt  contextualize_system.txt  discord_format.txt  hyde_system.txt  query_transform_system.txt
api/tests/: chat_models_access_support.py  chat_persistence_fake.py  embedding_worker_test_support.py  feedback_fake.py  feedback_test_support.py  test_agent_error_log_privacy.py  test_api_endpoints.py  test_byok_provider_clients.py  test_chat_cost_meta.py  test_chat_credentials_validation.py  test_chat_log_privacy.py  test_chat_models_access.py  test_chat_models_catalog.py  test_chat_persistence.py  test_chat_schema.py  test_chat_sharing_api.py  test_chat_sponsored_admission.py  test_chat_state_active_stream_api.py  test_chat_state_api.py  test_chat_state_regeneration.py  test_chat_system_prompt.py  test_chat_title.py  test_chat_title_model_selection.py  test_chat_user_schema.py  test_compose_embedding_worker.py  test_document_source_urls.py  test_embedding_administration_schemas.py  test_embedding_credentials.py  test_embedding_lifecycle.py  test_embedding_lifecycle_data_paths.py  test_embedding_lifecycle_fill_paths.py  test_embedding_log_privacy.py  test_embedding_sql.py  test_embedding_worker.py  test_embedding_worker_drain.py  test_embedding_worker_notifications.py  test_embedding_worker_retry.py  test_feedback_api.py  test_feedback_retraction_api.py  test_mcp_cache_failures.py  (+27 more)
api/tests/eval/: .gitignore  README.md  __init__.py  answer_compare.py  answer_eval.py  answer_golden.jsonl  compare_eval.py  golden.jsonl  run_eval.py  test_answer_eval.py  test_compare_eval.py
api/tests/integration/: embedding_postgres_test_support.py  fake_gpu_server.py  test_dirty_neighbor_context_postgres.py  test_embedding_administration_postgres.py  test_embedding_invalidation_postgres.py  test_embedding_invalidation_state_postgres.py  test_embedding_lifecycle_data_paths_postgres.py  test_embedding_lifecycle_postgres.py  test_embedding_lifecycle_rebuild_postgres.py  test_migrations_postgres.py  test_sponsored_usage_postgres.py
docs/plans/: 2026-06-25-web-chat-frontend.md  diploma-committee-recommender.md  response-feedback.md
gpu-api/: Dockerfile  pyproject.toml
gpu-api/app/: main.py
gpu-api/app/api/: embeddings.py  health.py  rerank.py  streams.py
gpu-api/app/llms/: embeddings.py  models.py  multilingual_e5_large.py  qwen2_1_5_b_instruct.py  qwen2_5_7b_instruct.py  qwen3.py  qwen_factory.py  reranker.py  streams.py
gpu-api/app/schemas/: rerank.py  streams.py
gpu-api/app/utils/: analytics.py  settings.py
gpu-api/resources/prompts/: agent_system.txt  web_format.txt
gpu-api/tests/: test_gpu_api_endpoints.py  test_gpu_api_model_surface.py
scripts/: backtest.py  compute_professor_groups.py  load_professor_documents.py  verify-sponsored-luna-preflight.sh  verify-sponsored-model-preflight.sh
web/: .dockerignore  .gitignore  Dockerfile  README.md  auth.ts  eslint.config.js  global.d.ts  instrumentation-client.ts  next-auth.d.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
web/e2e/: chat.spec.ts  confirm.spec.ts  diagnostics-popup.spec.ts  focus.spec.ts  mobile-chat.spec.ts  model-catalog.spec.ts  reasoning.spec.ts  (+4 more)
(+204 files in other folders)
