[project]
name = "api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.138.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-anthropic>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = ["asyncpg-stubs>=0.31.2", "mypy>=2.1.0", "ruff>=0.15.18"]

[tool.mypy]
python_version = "3.14"
plugins = ['pydantic.mypy']

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "TRY003",
    "PLR0911",
    "RET504",
    "RUF001",
    "E501",
    "PLR0913",
]
