[project]
name = "api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi[all]>=0.139.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.4",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "posthog>=7.22.0",
    "pydantic>=2.13.4",
    "tzdata>=2026.3",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.3",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.mypy]
python_version = "3.14"
plugins = ['pydantic.mypy']

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "TRY003",
    "PLR0911",
    "RET504",
    "RUF001",
    "E501",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
# Test/eval tooling: annotations, namespace-package, asserts, and pathlib-in-async
# are noise here, not signal.
"tests/**" = ["INP001", "ANN", "ASYNC240", "S101"]
