[project]
name = "gpu-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "accelerate>=1.13.0",
  "fastapi[all]>=0.136.0",
  "gunicorn>=25.1.0",
  "langchain>=1.2.13",
  "langchain-huggingface>=1.2.2",
  "sentence-transformers>=5.4.1",
  "torch>=2.10.0",
  "transformers>=5.6.0",
]

[dependency-groups]
dev = ["mypy>=1.20.2", "ruff>=0.15.11"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.mypy]
python_version = "3.13"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "B",
  "COM",
  "C4",
  "DTZ",
  "FA",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "PTH",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
]
ignore = [
  "PLR2004",
  "PLR0912",
  "PLR0915",
  "TRY003",
  "PLR0911",
  "RET504",
  "RUF001",
  "E501",
  "PLR0913",
]
