[project]
name = "gpu-api"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi[all]>=0.139.0",
  "gunicorn>=26.0.0",
  "langchain-huggingface>=1.2.2",
  "posthog>=7.22.0",
  "sentence-transformers>=5.6.0",
  "torch>=2.11.0",
]

[dependency-groups]
dev = ["mypy>=2.2.0", "pytest>=9.1.1", "ruff>=0.15.21"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.mypy]
python_version = "3.14"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "B",
  "COM",
  "C4",
  "DTZ",
  "FA",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "PTH",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
]
ignore = [
  "PLR2004",
  "PLR0912",
  "PLR0915",
  "TRY003",
  "PLR0911",
  "RET504",
  "RUF001",
  "E501",
  "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["INP001", "ANN", "S101"]
